<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.dailogs.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:onClick="onTime"
        android:text="@string/Button"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button3"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="82dp"
        android:onClick="onDate"
        android:text="@string/DatePicker"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="73dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="82dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="73dp"
        android:onClick="onProgress"
        android:text="@string/Progress"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="211dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="73dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:onClick="onAlert"
        android:text="@string/Alerts"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="67dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        android:layout_marginLeft="68dp"
        android:layout_marginRight="67dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:onClick="onCustom"
        android:text="@string/User_def"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="87dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.807" />
</android.support.constraint.ConstraintLayout>
